--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -2,7 +2,7 @@
 
 
 <div class="skills flexcol">
-    {{debug this}}
+   
     <div class="flexrow">
         <input type="text"  placeholder="Filter" value="{{data.skillFilter}}" name="data.skillFilter">
         <a class="item-create button" data-type="skill" title="Add new skill">New Skill</a>
@@ -20,11 +20,11 @@
 
     {{#each actor.skills as |skill key|}}
 
-    {{#if (contains skill.data.label.value ../data.skillFilter)}}
+    {{#if (contains skill.name ../data.skillFilter)}}
     {{#if skill.data.hasChildren.value}}
 
     <div class="skills-header grid grid-7col">
-        <span class="skillItem skill-group item-descr" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{skill.data.label.value}}</span>
+        <span class="skillItem skill-group item-descr" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{skill.name}}</span>
         <span class="skillItem" ></span>
         <span class="skillItem" ></span>
         <span class="skillItem" ></span>
@@ -39,12 +39,12 @@
 
     </div>
     {{#each ../actor.skills as |spec a|}}
+    
 
-
-    {{#if (compareString skill.data.name.value spec.data.parent.value)}}
+    {{#if (compareString skill.name spec.data.parent.value)}}
     <div class="skills-header grid grid-7col">
-        <span class="skillSubItem item-descr" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{spec.data.label.value}}</span>
-        <select data-item-id="{{spec._id}}" class="skillItem skill-char" >
+        <span class="skillSubItem item-descr" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{spec.name}}</span>
+        <select data-item-id="{{spec._id}}" class="skillItem skill-char" name="spec.data.characteristic.value">
             {{#select spec.data.characteristic.value}}
             <option value="ws">WS</option>
             <option value="bs">BS</option>
@@ -68,7 +68,7 @@
         </select>
         <input data-item-id="{{spec._id}}" class="skillItem skill-mod" type="text" value="{{spec.data.mod.value}}" data-dtype="Number"/>
 
-        <span data-item-id="{{spec._id}}" class="rollable skillItem button" data-roll-type="skill" data-target="{{spec.data.total.value}}" data-label="{{spec.data.label.value}}" data-char="{{spec.data.characteristic.value}}">{{spec.data.total.value}}</span>
+        <span data-item-id="{{spec._id}}" class="rollable skillItem button" data-roll-type="skill" data-target="{{spec.data.total.value}}" data-label="{{spec.name}}" data-char="{{spec.data.characteristic.value}}">{{spec.data.total.value}}</span>
         <a class="skillItem item-edit" title="Edit Skill" data-item-id="{{spec._id}}"></a>
         <a class="skillItem item-delete" title="Delete Skill" data-item-id="{{spec._id}}"></a>
 
@@ -83,7 +83,8 @@
     </div>
     {{else if (compareString skill.data.parent.value)}}
     <div class="skills-header grid grid-7col">
-        <span class="skillItem item-descr" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{skill.data.label.value}}</span>
+        
+        <span class="skillItem item-descr" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{skill.name}}</span>
         <select  data-item-id="{{skill._id}}" class="skillItem skill-char">
             {{#select skill.data.characteristic.value}}
             <option value="ws">WS</option>
@@ -108,7 +109,7 @@
         </select>
         <input data-item-id="{{skill._id}}" class="skillItem skill-mod" type="text" value="{{skill.data.mod.value}}" data-dtype="Number"/>
 
-        <span class="rollable skillItem button" data-roll-type="skill" data-target="{{skill.data.total.value}}" data-label="{{skill.data.label.value}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
+        <span class="rollable skillItem button" data-roll-type="skill" data-target="{{skill.data.total.value}}" data-label="{{skill.name}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
         <a class="skillItem item-edit" title="Edit Skill" data-item-id="{{skill._id}}"></a>
         <a class="skillItem item-delete" title="Delete Skill" data-item-id="{{skill._id}}"></a>
 
