--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -89,7 +89,7 @@
             <a class="tntItem item-delete" title="Delete" data-item-id="{{a._id}}"></a>
         </div>
 
-        <dd class="list-item">{{m.data.description.value}}</dd>
+        <dd class="list-item">{{a.data.description.value}}</dd>
         {{/each}}
 
     </dl>
