--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -11,7 +11,7 @@
             <a class="item" data-tab="skills">SKILLS</a>
             <a class="item" data-tab="tnt">TALENTS & TRAITS</a>
             <a class="item" data-tab="exp">EXP & MISSIONS</a>
-            <a class="item" data-tab="COMBAT">COMBAT</a>
+            <a class="item" data-tab="combat">COMBAT</a>
             <a class="item" data-tab="gear">GEAR & CYBERNETICS</a>
             <a class="item" data-tab="corruption">CORRUPTION & INSANITY</a>
             <a class="item" data-tab="psykana">PSYKANA</a>
@@ -25,11 +25,11 @@
     <section class="sheet-body">
 
         {{!-- Main Tab --}}
-        <div class="tab skillsContainer" data-group="primary" data-tab="main">
+        <div class="tab main" data-group="primary" data-tab="main">
             {{> "systems/fortyk/templates/actor/actor-main.html"}}
         </div>
 
-        <div class="tab skillsContainer" data-group="primary" data-tab="skills">
+        <div class="tab skills" data-group="primary" data-tab="skills">
             {{> "systems/fortyk/templates/actor/actor-skills.html"}}
         </div>
         <div class="tab tnt" data-group="primary" data-tab="tnt">
