--- a/templates/actor/actor-tnt.html
+++ b/templates/actor/actor-tnt.html
@@ -1,16 +1,16 @@
 <div class="tnt flexcol">
     <a class="item-create button" data-type="talentntrait" title="Add a new Talent or Trait">Add Talent or Trait</a>
-    <dl>
+    <ul>
         {{#each actor.talentsntraits as |t key|}}
         <div class="list-item flexrow">
-            <dt>{{t.name}}</dt>
+            <dt class="item-descr" data-item-descr="{{t.data.description.value}}">{{t.name}}</dt>
             <a class="tntItem item-edit" title="Edit" data-item-id="{{t._id}}"></a>
             <a class="tntItem item-delete" title="Delete" data-item-id="{{t._id}}"></a>
         </div>
 
-        <dd class="list-item">{{t.data.description.value}}</dd>
+        
         {{/each}}
 
-    </dl>
+    </ul>
 
 </div>
