--- a/templates/item/item-consummable-sheet.html
+++ b/templates/item/item-consummable-sheet.html
@@ -30,6 +30,6 @@
 
     <div class="flexcol">
         <label>Description:</label>
-        <textarea type="text" name="data.description.value">{{data.description.value}}</textarea>
+        {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
 </form>
