--- a/templates/item/item-malignancy-sheet.html
+++ b/templates/item/item-malignancy-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}} flexcol">
-    {{debug this}}
+    
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{item.name}}" name="name">
@@ -21,6 +21,6 @@
 
     <div class="flexcol">
         <label>Description:</label>
-        <textarea type="text" name="data.description.value">{{data.description.value}}</textarea>
+        {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
 </form>
