--- a/templates/item/item-skill-sheet.html
+++ b/templates/item/item-skill-sheet.html
@@ -53,7 +53,7 @@
         </div>
         <div class="flexcol">
         <label>Skill Description:</label>
-            <textarea type="text" class="skill-description skill-dialog" name="data.description.value" data-dtype="String">{{data.description.value}}</textarea>
+            {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
         </div>
         
     </form>
